--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.27",
-    "@types/react": "^17.0.27",
+    "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-transition-group": "^4.4.3",
     "classnames": "^2.3.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -22,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +48,11 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "4.0.6",
-    "@types/react-transition-group": "4.4.3",
-    "lodash.debounce": "4.0.8"
+    "@typescript-eslint/parser": "4.32.0",
+    "airbnb": "0.0.2",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "prettier": "2.4.1"
   }
 }
