--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "typescript": "^4.4.3",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/lodash.debounce": "4.0.6",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/parser": "4.32.0",
     "airbnb": "0.0.2",
     "eslint": "7.32.0",
