--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/react-transition-group": "^4.4.3",
     "classnames": "^2.3.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
